# sous-chef

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: SCOPE.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
backend/app/api/: chat.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  PantryList.tsx
frontend/src/hooks/: usePantry.ts  usePreferences.ts
frontend/src/lib/: api.ts  markdown.tsx  pantry.ts  preferences.ts  recipes.ts  types.ts
frontend/src/pages/: ChatPage.tsx  PantryPage.tsx  PreferencesPage.tsx  RecipesPage.tsx
