[project]
name = "pantrypal-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "langchain-community>=0.2",
    "tavily-python>=0.3",
    "duckduckgo-search>=6.0",
    "ddgs>=4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
